--- a/css/category.css
+++ b/css/category.css
@@ -1,12 +1,7 @@
 @import url("style.css");
 
-.container{
-	/*outline: 1px solid pink;*/
-}
-
 .category{
 	display: flex;
-	/*outline: 1px solid blue;*/
 	margin-top: -18px;
 	width: 100%;
 }
@@ -77,8 +72,6 @@
 	width: 15px;
 	height: 14px;
 	opacity: 0.4;
-	/*outline: 1px solid red;*/
-	/*display: flex;*/
 	box-sizing: border-box;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -93,9 +86,6 @@
 .but1 div{
 	background-color: #b9b9b9;
 	border-radius: 1px;
-	/*width: 5px;
-	height: 5px;*/
-	/*display: inline-block;*/
 }
 
 
@@ -192,9 +182,6 @@
 	border-radius: 10px;
 	box-sizing: border-box;
 	position: relative;
-	/*display: flex;
-	justify-content: center;
-	align-items: center;*/
 	text-align: center;
 }
 
@@ -222,7 +209,6 @@
 	font-weight: 700;
 	font-family: 'PT Mono', monospace;
 	line-height: 44px;
-	/*text-align: center;*/
 	box-sizing: border-box;
 	background-image: url('../img/buy-logo.png');
 	background-repeat: no-repeat;
@@ -381,10 +367,8 @@
 	padding-top: 15px;
 	height: 143px;
 	overflow: hidden;
-	/*position: relative;*/
 	position: absolute;
 	width: 100%;
-/*	margin-left: -;*/
 }
 
 .list-elem-description:hover{
@@ -392,16 +376,11 @@
 	height: auto;
 	border: 3px solid #178eff;
 	border-radius: 7px;
-	/*margin-left: -20px;
-	padding-left: 16px;
-	padding-bottom: 24px;
-	margin-bottom: -24px;*/
 	margin-left: -20px;
 	padding-left: 17px;
 	padding-right: 16px;
 	padding-top: 12px;
 	background-color: #fff;
-	/*width: 663px;*/
 	z-index: 3001;
 	position: absolute;
 }
@@ -476,7 +455,6 @@
 
 .popup-top{
 	border-bottom: 2px solid #e5e5e5;
-/*	width: 100%;*/
 	padding-left: 30px;
 	padding-right: 30px;
 	padding-bottom: 15px;
@@ -515,15 +493,11 @@
 .popup-bottom{
 	max-width: 702px;
 	display: flex;
-	/*flex-direction: column;*/
 	justify-content: space-between;
 	align-items: center;
 	padding-top: 20px;
 	padding-left: 30px;
 	padding-right: 30px;
-	/*background-color: gray;*/
-	/*display:block;
-  	margin:0 auto;*/
   	font-family:Arial;
   	overflow: hidden;
 }
@@ -532,8 +506,6 @@
 	width: 646px;
 	height: 226px;
 	position: relative;
-	/*outline: 1px solid red;*/
-	/*margin-right: 50px;*/
 }
 
 .popup-slider .slick-track{
@@ -576,9 +548,7 @@
 	display: inline-block;
 	margin-top: 5px;
 	margin-left: 80px;
-	/*position: absolute;
-	right: 25px;
-*/	cursor: pointer;
+	cursor: pointer;
 	background-image: url('../img/buy-logo.png');
 	background-repeat: no-repeat;
 	background-position: center;
@@ -649,7 +619,6 @@
 	margin: 25px 0 46px 0px;
 	display: flex;
 	justify-content: flex-end;
-	/*padding-left: 20px;*/
 }
 
 .pagination-cont{
@@ -772,8 +741,6 @@
 	height: 16px;
 	border-radius: 3px;
 	border: 1px solid #e5e5e5;
-	/*outline: 1px solid red;*/
-	/*left: -20px;*/
 	left: -5px;
 	top: -2px;
 }
@@ -828,7 +795,6 @@
 	margin-top: 18px;
 	width: 190px;
 	position: relative;
-	/*z-index: 1;*/
 }
 
 .ui-slider .ui-slider-handle{
@@ -847,9 +813,6 @@
 	background-position: center;
 }
 
-.price-filter{
-	
-}
 
 .price-filter input{
 	width: 66px;
@@ -1050,7 +1013,6 @@
 	padding-bottom: 27px;
 	border-bottom: 2px solid #dfe8fa;
 	border-right: 2px solid #dfe8fa;
-	/*margin-top: -10px;*/
 	padding-top: 10px;
 }
 
@@ -1076,7 +1038,6 @@
 	color: #515151;
 	font-size: 	15px;
 	border-top: 1px solid #e5e5e5;
-/*	display: block;*/
 }
 
 
